https://github.com/dropchop-com/recyclone/issues/5 Minor refactoring... #5